# NewsReporterAI

./: .gitignore  PRD.md  README.md  crew.py  new-blog-post.md  tasks.py
backend/: .env.example  Dockerfile  README.md  api_demo.py  environment.yml  new-blog-post.md  pyproject.toml  requirements-crewai-full.txt  requirements.txt  setup.py
backend/newreporter_backend/: config.py  main.py
backend/newreporter_backend/api/: __init__.py  deps.py  routes.py  schemas.py
backend/newreporter_backend/domain/: __init__.py  agents.py  tasks.py
backend/newreporter_backend/integrations/: __init__.py  crew_runner.py
backend/newreporter_backend/services/: sample_service.py
backend/tests/: __init__.py  conftest.py  test_domain_tasks_agents.py  test_integrations_import.py  test_services_sample_service.py
crewgemini_env/conda-meta/: history  libffi-3.4.2-h0d85af4_5.json  libsqlite-3.46.1-h4b8f8c9_0.json  ncurses-6.5-hf036a51_1.json  openssl-3.3.2-hd23fc13_0.json  python-3.12.0-h30d4d87_0_cpython.json  readline-8.2-h9e318b2_1.json  tk-8.6.13-h1abcd95_1.json  xz-5.2.6-h775f41a_0.json
crewgemini_env/etc/: aau_token
crewgemini_env/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
crewgemini_env/share/terminfo/63/: cit101e  crt  (+3 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: dummyArticle.js  generateArticle.js
frontend/src/components/: Logo.jsx  Navbar.jsx  Sidebar.jsx  UnderConstruction.jsx
frontend/src/pages/: About.jsx  Article.jsx  Contact.jsx  Generate.jsx  Home.jsx
(+137 files in other folders)
